Fixed the extra padding added below the article image container.

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ html, body, header, footer, article, nav, section, aside, time, h1, h2, h3, p, a
 }
 img{
 	width: 100%;
+	display: block;
 }
 .center{
 	margin:0 auto;
